@@ -1349,7 +1349,7 @@ Development can proceed in different ways:
 \item Via ``merge'' requests from a branch of the q-e repository
       ({\em not recommended})
 \item Directly into the ``develop'' branch, or in a ``backport'' branch
-  if existing.
+	if existing ({\em strongly discouraged}).
 \end{enumerate}
 The first option is the recommended one. To start:
 \begin{itemize}
