@@ -578,10 +578,12 @@ input_description -distribution {Quantum Espresso} -package PWscf -program pw.x 
               -13          Monoclinic base-centered        celldm(2)=b/a
                            (unique axis b)                 celldm(3)=c/a,
                                                            celldm(5)=cos(beta)
-                    v1 = (  a/2,      -b/2,             0),
-                    v2 = (  a/2,       b/2,             0),
+                    v1 = (  a/2,       b/2,             0),
+                    v2 = ( -a/2,       b/2,             0),
                     v3 = (c*cos(beta),   0,   c*sin(beta)),
                     where beta=angle between axis a and c projected on xz plane
+               IMPORTANT NOTICE: until QE v.6.4.1, axis for ibrav=-13 had a 
+               different definition: v1(old) = v2(now), v2(old) = -v1(now)
 
                14          Triclinic                       celldm(2)= b/a,
                                                            celldm(3)= c/a,
